added light box on the gallery images

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -42,7 +42,7 @@
             <img
               src="https://images.unsplash.com/photo-1507692049790-de58290a4334?w=600&h=400&fit=crop"
               alt="Traditional blessing ceremony"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Ayiasmos</h3>
             <p class="text-text-secondary">
@@ -55,7 +55,7 @@
             <img
               src="https://images.unsplash.com/photo-1560807707-8cc77767d783?w=600&h=400&fit=crop"
               alt="Greek National Day celebration"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">October 28th</h3>
             <p class="text-text-secondary">
@@ -68,7 +68,7 @@
             <img
               src="https://images.unsplash.com/photo-1603565816030-6b389eeb23cb?w=600&h=400&fit=crop"
               alt="Greek Independence Day"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">March 25th</h3>
             <p class="text-text-secondary">
@@ -81,7 +81,7 @@
             <img
               src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=400&fit=crop"
               alt="Cyprus National Day"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">April 1st</h3>
             <p class="text-text-secondary">
@@ -94,7 +94,7 @@
             <img
               src="https://images.unsplash.com/photo-1512389142860-9c449e58a814?w=600&h=400&fit=crop"
               alt="Christmas celebration"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Christmas Celebration</h3>
             <p class="text-text-secondary">
@@ -107,7 +107,7 @@
             <img
               src="https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?w=600&h=400&fit=crop"
               alt="Carnival celebration"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Carnival Party (Apokries)</h3>
             <p class="text-text-secondary">
@@ -120,7 +120,7 @@
             <img
               src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=600&h=400&fit=crop"
               alt="Books and reading"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Online Author Visits</h3>
             <p class="text-text-secondary">
@@ -133,7 +133,7 @@
             <img
               src="https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?w=600&h=400&fit=crop"
               alt="Student performance"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Student Performances</h3>
             <p class="text-text-secondary">
@@ -146,7 +146,7 @@
             <img
               src="https://images.unsplash.com/photo-1513364776144-60967b0f800f?w=600&h=400&fit=crop"
               alt="Art exhibition"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Themed Art Exhibitions</h3>
             <p class="text-text-secondary">
@@ -159,7 +159,7 @@
             <img
               src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=600&h=400&fit=crop"
               alt="Community gathering"
-              class="aspect-video object-cover rounded-lg mb-4"
+              class="aspect-video object-cover rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity"
             >
             <h3 class="text-xl font-semibold mb-2">Community Collaboration</h3>
             <p class="text-text-secondary">
@@ -175,7 +175,7 @@
       <div class="section-container">
         <div class="text-center max-w-3xl mx-auto">
           <p class="text-lg italic text-text-secondary">
-            *Photo galleries will be added soon. Follow us on Facebook to see our latest events and celebrations!
+            Follow us on Facebook to see our latest events and celebrations!
           </p>
           <a
             href="https://www.facebook.com/GreekSchoolNewcastleUponTyne/"
@@ -191,5 +191,6 @@
   </main>
 
   <site-footer></site-footer>
+  <image-lightbox></image-lightbox>
 </body>
 </html>
