add school logo to gallery and link policies in footer

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -37,6 +37,19 @@
     <section class="section-padding bg-primary-pale">
       <div class="section-container">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- School Logo -->
+          <div class="card group hover:shadow-xl transition-shadow">
+            <img
+              src="/assets/logo.jpg"
+              alt="Greek Community School of Newcastle logo"
+              class="aspect-video object-contain rounded-lg mb-4 gallery-image cursor-pointer hover:opacity-90 transition-opacity bg-white"
+            >
+            <h3 class="text-xl font-semibold mb-2">Our School Logo</h3>
+            <p class="text-text-secondary">
+              The official logo of the Greek Community School of Newcastle.
+            </p>
+          </div>
+
           <!-- Ayiasmos -->
           <div class="card group hover:shadow-xl transition-shadow">
             <img
